템플릿 상속/확장 및 MVP.css 적용
템플릿에 대한 기본 설정 -> 렌더링 시 변수 전달까지
MVP.css 적용해서 조금 더 예쁜 html 상태에서 백엔드 시작!

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,7 +1,6 @@
-doctype doctype html
-html(lang="ko")
-    head
-        title Ongtube
-    body
-        h1 Welcome to Ongtube!!
-    include partials/footer.pug
+extends base.pug
+
+block content 
+    h1 Home!! Welcome to Ongtube!
+    input(placeholder="Whats your name??")
+    button send
