--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,4 +1,9 @@
-extends base.pug
+extends base
+include mixins/video
 
 block content 
     h2 Welcome here you will see the trending videos
+    each v in videos
+        +video(v)
+    else
+        li Sorry nothing found.
