POST 처리 관련 설정 추가
urlencoded 미들웨어 추가로 form 전송 데이터 인식 가능
edit 페이지에 대한 get/post 각각의 컨트롤러 실행 설정
임시 데이터 수정 형태로 테스트

--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -1,4 +1,8 @@
 extends base.pug
 
 block content 
-    h2 Edit Me!!
+    h4 Change Title of Video
+    // POST 형태로 전송
+    form(method="POST")
+        input(name="title", placeholder="Video Title", value=video.title, required)
+        input(value="Save", type="submit")
