mongoDB 연동 -> mongoose 적용
mongodb 설치 및 서버 가동
mongoose를 사용하여 node 서버와 db 서버 간의 연동 진행

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,6 +1,12 @@
 extends base
 include mixins/video
 
+block headerContent 
+    nav 
+        ul 
+            li 
+                a(href="/videos/upload") UPLOAD VIDEO
+
 block content 
     h2 Welcome here you will see the trending videos
     each v in videos
