--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,6 +1,7 @@
 extends base.pug
 
 block content 
-    h3 #{video.views} #{video.views === 1 ? "view" : "views"}
-    h3 #{video.rating} rating
+    div
+        p=video.description
+        small=video.createdAt
     a(href=`${video.id}/edit`) Edit Video &rarr;
