--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -12,6 +12,8 @@ html(lang="ko")
                     block headerContent
                     li
                         a(href="/") Home 
+                    li 
+                        a(href="/search") Search
         main
             block content
     include partials/footer
