--- a/src/views/join.pug
+++ b/src/views/join.pug
@@ -4,10 +4,15 @@ block content
     if errorMessage
         span=errorMessage
     form(method="POST")
-        input(name="name", type="text", required, placeholder="이름") 
-        input(name="email", type="email", required, placeholder="이메일")
-        input(name="username", type="text", required, placeholder="닉네임") 
-        input(name="password", type="password", required, placeholder="비밀번호") 
-        input(name="passwordCheck", type="password", required, placeholder="비밀번호 확인") 
-        input(name="location", type="text", required, placeholder="지역")
+        input(name="name", type="text", required, placeholder="Name") 
+        input(name="email", type="email", required, placeholder="Email")
+        input(name="username", type="text", required, placeholder="Username") 
+        input(name="password", type="password", required, placeholder="Password") 
+        input(name="passwordCheck", type="password", required, placeholder="Password Check") 
+        input(name="location", type="text", required, placeholder="Location")
         input(type="submit", value="Join")
+
+    hr 
+    div 
+        span Already have an account?? 
+        a(href="/login") Login Now &rarr; 
