--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -13,11 +13,11 @@ html(lang="ko")
                         a(href="/") Home 
                     if loggedIn 
                         li 
+                            a(href='/videos/upload') Upload Video
+                        li 
                             a(href='/users/edit') Edit Profile
                         li 
                             a(href="/users/logout") Logout 
-                        li 
-                            a(href="/my-profile") #{loggedInUser.name}의 Profile
                     else
                         li
                             a(href="/login") Login
@@ -25,7 +25,6 @@ html(lang="ko")
                             a(href="/join") Join
                     li 
                         a(href="/search") Search
-                    block headerContent
         main
             block content
     include partials/footer
