--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -5,6 +5,12 @@ block content
     div
         p=video.description
         small=video.createdAt
-    a(href=`${video.id}/edit`) Edit Video &rarr;
-    br
-    a(href=`${video.id}/delete`) Delete Video &rarr;
+    div 
+        small Uploaded by 
+            a(href=`/users/${video.owner._id}`) #{video.owner.username}
+    
+    // 해당 영상 주인에게만 수정/삭제 버튼 출력
+    if String(video.owner._id) === String(loggedInUser._id)
+        a(href=`${video.id}/edit`) Edit Video &rarr;
+        br
+        a(href=`${video.id}/delete`) Delete Video &rarr;
