--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -2,7 +2,19 @@ extends base
 include mixins/video
 
 block content 
-    each v in videos
-        +video(v)
-    else
-        li Sorry nothing found.
+    div.video-grid
+        each v in videos
+            +video(v)
+            +video(v)
+            +video(v)
+            +video(v)
+            +video(v)
+            +video(v)
+            +video(v)
+            +video(v)
+            +video(v)
+            +video(v)
+            +video(v)
+            +video(v)
+        else
+            span.empty__message No videos found
