--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -2,15 +2,24 @@ extends base.pug
 
 block content 
     video(src="/" + video.fileUrl controls autoplay)
-    div
-        p=video.description
-        small=video.createdAt
     div 
-        small Uploaded by 
-            a(href=`/users/${video.owner._id}`) #{video.owner.username}
-    
-    // 해당 영상 주인에게만 수정/삭제 버튼 출력
-    if String(video.owner._id) === String(loggedInUser._id)
-        a(href=`${video.id}/edit`) Edit Video &rarr;
-        br
-        a(href=`${video.id}/delete`) Delete Video &rarr;
+        button#play Play
+        button#mute Mute 
+        span#time 00:00/00:00
+        input(type="range" step="0.1" value=0.5 min="0" max="1")#volume
+    //-
+        div
+            p=video.description
+            small=video.createdAt
+        div 
+            small Uploaded by 
+                a(href=`/users/${video.owner._id}`) #{video.owner.username}
+        
+        // 해당 영상 주인에게만 수정/삭제 버튼 출력
+        if String(video.owner._id) === String(loggedInUser._id)
+            a(href=`${video.id}/edit`) Edit Video &rarr;
+            br
+            a(href=`${video.id}/delete`) Delete Video &rarr;
+
+block scripts 
+    script(src="/static/js/videoPlayer.js")
