--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -7,9 +7,13 @@
 @import "./components/footer.scss";
 @import "./components/video.scss";
 @import "./components/shared.scss";
+@import "./components/forms.scss";
+@import "./components/social-login.scss";
 
 // Screens
 @import "./screens/search.scss";
+@import "./screens/profile.scss";
+@import "./screens/edit-profile.scss";
 
 // Defaults
 
