--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -33,7 +33,7 @@ block content
     if loggedIn
         div.video__comments
             form.video__comment-form#commentForm
-                textarea(cols="30", rows="10", placeholder="Write a nice commment.")
+                textarea#commentArea(cols="30", rows="10", placeholder="Write a nice commment.")
                 button Add Comment
     //-
         div
