--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -62,8 +62,12 @@ main {
     border-radius: 1000px;
     text-align: center;
     animation: goAway 0.5s ease-in-out forwards;
-    animation-delay: 5s;
+    animation-delay: 3s;
     &.error {
+        background-color: tomato;
+        color: white;
+    }
+    &.info {
         background-color: tomato;
         color: white;
     }
