--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -42,7 +42,9 @@ block content
                 li.video__comment(data-comment-id=comment._id)
                     i.fas.fa-comment
                     span  #{comment.contents}
-                    span ❌
+                    //- 해당 comment 입력한 사람과 로그인 유저가 동일할 경우
+                    if String(comment.owner._id) === String(loggedInUser._id)
+                        a(href=`/api/comment/${comment._id}/delete`) ❌
 
 block scripts 
     script(src="/static/js/videoPlayer.js")
