--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -19,7 +19,7 @@ header
                             span 😄
                         else 
                             if loggedInUser.socialOnly
-                                img(src=loggedInUser.avatarUrl, crossrigin="use-credentials").header__avatar
+                                img(src=loggedInUser.avatarUrl, crossorigin="use-credentials").header__avatar
                             else 
                                 img(src="/" + loggedInUser.avatarUrl).header__avatar
             else
