aws s3 file server update

--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -21,7 +21,7 @@ header
                             if loggedInUser.socialOnly
                                 img(src=loggedInUser.avatarUrl).header__avatar
                             else 
-                                img(src="/" + loggedInUser.avatarUrl).header__avatar
+                                img(src=loggedInUser.avatarUrl).header__avatar
             else
                 li
                     a(href="/login") Login
