css update - video watch

--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -71,4 +71,8 @@ main {
         background-color: tomato;
         color: white;
     }
+    &.success {
+        background-color: tomato;
+        color: white;
+    }
 }
