--- a/src/client/scss/screens/watch.scss
+++ b/src/client/scss/screens/watch.scss
@@ -2,35 +2,131 @@
     margin-top: 20px;
     display: flex;
     flex-direction: column;
+    .video__tags {
+        display: flex;
+        color: #3ea6ff;
+        p {
+            display: block;
+            margin-right: 5px;
+        }
+    }
+    .video__info {
+        display: flex;
+        margin-bottom: 15px;
+        font-size: 14px;
+        p {
+            display: block;
+            margin-right: 8px;
+        }
+    }
     .video__title {
-        font-size: 26px;
-        margin-bottom: 5px;
+        font-size: 40px;
+        margin-bottom: 10px;
     }
     .video__createdAt {
         font-size: 12px;
     }
     .video__owner {
-        margin-bottom: 5px;
-        font-size: 14px;
-        a {
+        display: flex;
+        margin-bottom: 15px;
+        img {
+            width: 40px;
+            height: 40px;
+            border-radius: 99px;
+        }
+        a.video__owner-name {
+            font-size: 18px;
+            margin: 0 0 0 10px;
             color: cornflowerblue;
             text-decoration: underline;
         }
     }
 }
 
+.video__add-comments {
+    form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    textarea {
+        width: 420px;
+        height: 40px;
+        resize: none;
+        border: 1px solid rgba($color: #000000, $alpha: 0.5);
+        border-radius: 15px;
+        font-size: 12px;
+        text-align: left;
+        color: #63717f;
+        padding: 9px;
+        background: #eaeaea;
+    }
+    textarea:hover,
+    textarea:focus {
+        background: #ffffff;
+    }
+    button {
+        -webkit-transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+        -moz-transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+        -ms-transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+        -o-transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+        transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+        display: block;
+        margin: 20px auto;
+        max-width: 180px;
+        text-decoration: none;
+        border-radius: 4px;
+        padding: 15px 35px;
+        margin-top: 10px;
+        color: rgba(30, 22, 54, 0.6);
+        box-shadow: rgba(30, 22, 54, 0.4) 0 0px 0px 2px inset;
+    }
+    button:hover {
+        color: rgba(255, 255, 255, 0.85);
+        box-shadow: rgba(30, 22, 54, 0.7) 0 0px 0px 40px inset;
+    }
+}
+
 .video__comments {
     display: flex;
     flex-direction: column;
-    max-width: 320px;
+    max-width: 400px;
     width: 100%;
     margin: 0 auto;
     margin-top: 20px;
     .video__comment {
+        position: relative;
+        width: 380px;
         padding: 10px;
         border-radius: 9999px;
         background-color: white;
         color: black;
         margin-bottom: 10px;
+        button {
+            position: absolute;
+            right: 10px;
+            top: 5px;
+            border: none;
+            background-color: white;
+        }
+    }
+}
+
+.video__owner-btns {
+    margin: 5px;
+    a {
+        display: flex;
+        padding: 5px;
+        width: 140px;
+        height: 24px;
+        font-size: 17px;
+        justify-content: center;
+        align-items: center;
+        background-color: #aeadad;
+        border-radius: 15px;
+    }
+    a:hover {
+        color: rgba(255, 255, 255, 0.85);
+        box-shadow: rgba(30, 22, 54, 0.7) 0 0px 0px 40px inset;
     }
 }
