--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -31,7 +31,7 @@ block content
             //- p.video__createdAt=new Date(video.createdAt).toLocaleDateString("ko-kr", {weekday: 'long', year: 'numeric', month: 'long', day: 'numeric'})
         div.video__owner
             a(href=`/users/${video.owner._id}`)
-                img(src=`/${video.owner.avatarUrl}`)
+                img(src=`${video.owner.avatarUrl}`)
             a.video__owner-name(href=`/users/${video.owner._id}`)=video.owner.name
         if String(video.owner._id) === String(loggedInUser._id)
             div.video__owner-btns
